--- a/frontend/src/pages/RankingPage.css
+++ b/frontend/src/pages/RankingPage.css
@@ -103,7 +103,7 @@
   font-weight: bold;
 }
 .run-legend {
-  background: linear-gradient(to top right, #b9a25d, #ebbfa1);
+  background: linear-gradient(to top right, #cfbb7c, #ebbfa1);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-weight: bold;
